--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,10 @@ serde = { version = "1.0", optional = true, features = ["serde_derive"] }
 [target.'cfg(windows)'.dependencies]
 winreg = "0.52"
 
+[target.'cfg(target_os = "macos")'.dependencies]
+apple-sys = { version = "0.2", features = ["IOKit"] }
+core-foundation = "0.10"
+
 [features]
 serde = ["dep:serde", "uuid/serde"]
 
