--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,9 @@ serde = { version = "1.0", optional = true, features = ["serde_derive"] }
 [target.'cfg(windows)'.dependencies]
 winreg = "0.52"
 
+[target.'cfg(unix)'.dependencies]
+libc = "0.2.158"
+
 [target.'cfg(target_os = "macos")'.dependencies]
 apple-sys = { version = "0.2", features = ["IOKit"] }
 core-foundation = "0.10"
